finish old component like slide

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -101,6 +101,9 @@ body
                         span
                             font-weight 500
                             color #9A274E
+        pre
+            &.no-scroll
+                overflow visible
     .slide-home-container
         background-image url("/images/coding-bg.jpg")
         background-size cover
