finishig the 3 first wc slides

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -104,6 +104,8 @@ body
         pre
             &.no-scroll
                 overflow visible
+            &.streched-code
+                font-size 0.778em
     .slide-home-container
         background-image url("/images/coding-bg.jpg")
         background-size cover
