finishing the web components slides according to Mark Dalgleish presentation

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -29,6 +29,8 @@ body
                         width 10px
                         height 10px
                         background #FFFC3C
+                &.bigger
+                    font-size 1.5em
             &.slide-home
                 color rgba(#000, 0.8)
                 h1, h2, h3
@@ -104,6 +106,8 @@ body
         pre
             &.no-scroll
                 overflow visible
+                padding 15px !important
+                box-sizing: content-box
             &.streched-code
                 font-size 0.778em
     .slide-home-container
