add web components templates slides

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -6,6 +6,8 @@ body
         &.bespoke-slide
             background transparent
             color rgba(#FFF, 0.9)
+            a
+                color #00EFF3
             h1, h2, h3
                 color #FFF
                 font-weight 700
