add gitlab link

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -18,6 +18,10 @@ body
                 background #010A0C
             .ln-return
                 display block
+            img
+                &.gitlab
+                    vertical-align middle
+                    margin-right 10px
             ul
                 li
                     position relative
