update gitlab slide

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -8,6 +8,10 @@ body
             color rgba(#FFF, 0.9)
             a
                 color #00EFF3
+                small
+                    display block
+                    color #7FCED0
+                    font-size 0.625em
             h1, h2, h3
                 color #FFF
                 font-weight 700
